@@ -74,3 +74,6 @@
 	* Incremented the package version to 2.0.0rc1.
 2025-02-13 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored vncmon(1) to allow dynamic updating of configuration.
+2025-02-13 Fred Gleason <fredg@paravelsystems.com>
+	* Updated installer scripts in the DEB package to facilitate first-
+	time startup.
